sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1: error: ambiguous reference to overloaded definition,
both method bubbleSort in class AlgBubbleSort1 of type ()Unit
and  method bubbleSort in class AlgBubbleSort1 of type ()Unit
match argument types ()
		bubbleSort();
                ^AlgBubbleSort1:13: error: method bubbleSort is defined twice
  conflicting symbols both originated in file 'plm.runtime68.AlgBubbleSort1'
def bubbleSort()  {var x:Int=getValueCount(); var y:Int=0; for (i<-0 to x) {y=i; while (isSmaller(y+1, y)) {swap(y+1,y); if (y>0) {y=y-1}}; y=0}
    ^